<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_friends"
            android:checkable="true"
            android:icon="@drawable/ic_group_24dp"
            android:title="@string/friends_list" />

        <item
            android:id="@+id/drawer_recent"
            android:checkable="true"
            android:icon="@drawable/envelope_with_pencil"
            android:title="@string/recent_messages" />

        <item
            android:id="@+id/drawer_add_friend"
            android:checkable="true"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/add_friend" />

        <item
            android:id="@+id/drawer_about"
            android:checkable="true"
            android:icon="@drawable/info_24dp"
            android:title="@string/about" />

    </group>
</menu>