<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/anchor"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_background"
        android:scaleType="centerCrop"
        android:src="@drawable/mountain_lake" />

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_image_width_height"
        android:layout_height="@dimen/profile_image_width_height"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/profile_card_margin"
        android:layout_marginRight="@dimen/profile_card_margin"
        android:src="@drawable/user" />


    <android.support.v7.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/is_online"
        android:layout_alignTop="@+id/profile_image"
        android:layout_toEndOf="@+id/profile_image"
        android:layout_toRightOf="@+id/profile_image"
        android:minWidth="@dimen/profile_grid_min_height"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/content_spacing">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                tools:text="User Name" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_spacing"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="Email" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_message_button"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_a_message" />

                <Button
                    android:id="@+id/add_friends_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_friend" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/is_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profile_image"
        android:layout_alignLeft="@+id/profile_image"
        android:layout_alignRight="@+id/profile_image"
        android:layout_alignStart="@+id/profile_image"
        android:layout_below="@+id/profile_image"
        android:gravity="center"
        android:padding="@dimen/content_spacing"
        tools:text="is Online" />

</RelativeLayout>